# secondcents

./: .gitignore  README.md  docker-compose.yml  realm_config.json  restart_stack.sh  runStack.sh  setup.sh
TwoCents/: .compile  buildServer.json  test.swift  textTest.swift
analytics/: Dockerfile  docker-compose.yml
auth/: custom_user_data.json  providers.json
database/: init.sql
functions/: add_dumbshit.js  config.json  createUser.js  newUser.js
reverseproxy/: Dockerfile  buildDocker.sh  runDocker.sh
server/: .gitignore  Cargo.toml  Dockerfile  README.md  buildDocker.sh  bun.lockb  go.mod  go.sum  package.json  runDocker.sh  stopDocker.sh
server/cmd/: main.go
server/internal/: router.go
server/internal/core/auth/: spaces.go  users.go
server/internal/core/models/: chat.go  space.go  user.go
server/internal/core/notifications/: generate_notification.go  notifications.go
server/internal/handler/: home.go  notification.go  v1.go
server/internal/handler/space/: accept_space.go  add_member.go  decline_space.go  delete_space.go  fetch_token.go  hotseat.go  invite_link.go  invite_space.go  join_space.go  space_notification.go
server/internal/handler/user/: friend_request.go  user_notification.go
server/internal/middleware/: auth.go  context.go  logger.go  middleware.go
server/internal/routes/: core_routes.go  space_routes.go  user_routes.go
server/internal/static/: index.html  styles.css
server/src/: call_python.rs  handle_get.rs  index.ts  main.rs  routes.rs
server/src/lib/: notification.ts
server/src/python/: README.md  backend_test.py
(+401 files in other folders)
