[package]
name = "twocents-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]]
#name = "zeez-server"

[dependencies]
axum = "0.7.4"
axum-server = "0.6.0"
tokio = { version = "1.36.0", features = ["full"] }
cpython = "0.7.1"
pyo3 = { version = "0.20.3", features = ["auto-initialize"] }
